SonarLint issues fixed